# CenterStage

./: .gitmodules  README.md  build.common.gradle  build.dependencies.gradle  build.gradle  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: gradle.yml
FtcRobotController/: build.gradle
FtcRobotController/src/main/: AndroidManifest.xml
GoldenDragonTesting/src/main/java/com/example/goldendragontesting/: GDtest.java  ImageConst.java
TeamCode/: CMakeLists.txt  build.gradle
TeamCode/src/main/cpp/: CMakeLists.txt  main.cpp
TeamCode/src/main/cpp/src/: main.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: AJOPMode.java  DriveConstants.java  DriveMotors.java  GDAuto.java  GDAutoBlue.java  GDAutoPresets.java  GDAutoRed.java  GDAutoTest.java  GDTeleOp.java  GDriveTest.java  RoboTag.java  ServoTest.java  StorePos.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/DriveTrain/: Mecanum.java  MotorStruct.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Oak/: CameraPreview.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Subsystem/: AlignBackboard.java  ArmDriver.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Utils/: GamepadTrigger.java  PIDControl.java  TriggerGamepadEx.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Vision/: AprilTagDetectionPipeline.java  TagPipeline.java
TeamCode/src/main/res/values/: bindings.json  strings.xml
TeamCode/src/main/res/xml/: gdconfig.xml
gradle/wrapper/: gradle-wrapper.properties
(+117 files in other folders)
